--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 tw-sidebar {
     display: none;
 }
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -101,7 +103,7 @@ A direct text-based message from (colour: &quot;#F5DDB8&quot;)[Lily] appears.(st
 &quot;Malcolm, I think you should see this,&quot; I say.
 I say nothing.](click-replace: &#x27;&quot;Lily is here.&quot; I say.&#x27;)[&quot;(colour: &quot;#F5DDB8&quot;)[Lily] is-&quot;
 
-The distinctive smell of burning metal fills the air. A loud machine scream pierces our ears. A bright, molten rim appears around the door.(replace: &#x27;&quot;Malcolm, I think you should see this.&quot; I say.&#x27;)[](replace: &quot;I say nothing.&quot;)[]](click-replace: &#x27;&quot;Malcolm, I think you should see this.&quot; I say.&#x27;)[&quot;Malcolm-&quot;
+The distinctive smell of burning metal fills the air. A loud machine scream pierces our ears. A bright, molten rim appears around the door.(replace: &#x27;&quot;Malcolm, I think you should see this.&quot; I say.&#x27;)[](replace: &quot;I say nothing.&quot;)[]](click-replace: &#x27;&quot;Malcolm, I think you should see this,&quot; I say.&#x27;)[&quot;Malcolm-&quot;
 
 The distinctive smell of burning metal fills the air. A loud machine scream pierces our ears. A bright, molten rim appears around the door.
 (replace: &#x27;&quot;Lily is here.&quot; I say.&#x27;)[](replace: &quot;I say nothing.&quot;)[]](click-replace: &#x27;I say nothing.&#x27;)[I say nothing.
@@ -139,7 +141,7 @@ The distinctive smell of burning metal fills the air. A loud machine scream pier
 
 (click: &quot;You&#x27;re&quot;)[&quot;What about-&quot; Malcolm (colour: &quot;#FFFFE0&quot;)[whimpers].
 
-(display: &quot;What about Malcolm&quot;)]</tw-passagedata><tw-passagedata pid="5" name="What about Malcolm" tags="" position="307,678">&quot;-What about //you//? //You//, Malcolm, are coming with //me//. We&#x27;re going to meet //Alex//. //Big Momma//. Your //boss//.&quot;
+(display: &quot;What about Malcolm&quot;)]</tw-passagedata><tw-passagedata pid="5" name="What about Malcolm" tags="" position="306,679">&quot;-What about //you//? //You//, Malcolm, are coming with //me//. We&#x27;re going to meet //Alex//. //Big Momma//. Your //boss//.&quot;
 
 (colour: &quot;#F5DDB8&quot;)[Lily] (colour: &quot;#DC143C&quot;)[laughs].
 
@@ -153,7 +155,7 @@ The distinctive smell of burning metal fills the air. A loud machine scream pier
 
 (click: &quot;holding him tight&quot;)[She breathes deeply. Her (colour: &quot;#1E90FF&quot;)[eyes] are (colour: &quot;#1E90FF&quot;)[dewy].]
 
-(click: &quot;dewy&quot;)[She clenches him her irresistible grip and breathes slowly for a long time, one finger tracing circles on his back. Her (colour: &quot;#DC143C&quot;)[smile] is one of serene pleasure. She (colour: &quot;#1E90FF&quot;)[cries].]
+(click: &quot;dewy&quot;)[She clenches him in her irresistible grip and breathes slowly for a long time, one finger tracing circles on his back. Her (colour: &quot;#DC143C&quot;)[smile] is one of serene pleasure. She (colour: &quot;#1E90FF&quot;)[cries].]
 
 (click: &quot;cries&quot;)[Eventually she releases the (colour: &quot;#A6D5B5&quot;)[sweating] man and wipes her cheek.]
 
@@ -188,7 +190,7 @@ Violence, and the threat of violence, is power.
 No one is safe.
 That&#x27;s not a morphine overdose.]
 
-(click: &quot;It was his own stupidity that got him here.&quot;)[(replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;What can I gain from this?&quot;)[(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;Violence, and the threat of violence, is power.&quot;)[(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;No one is safe.&quot;)[(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;That&#x27;s not a morphine overdose.&quot;)[(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[][Inevitable...]]
+(click: &quot;It was his own stupidity that got him here.&quot;)[(set: $songthought to &quot;stupid&quot;)(replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[(set: $songthought to &quot;cruel&quot;)(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[(set: $songthought to &quot;slave&quot;)(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;What can I gain from this?&quot;)[(set: $songthought to &quot;gain&quot;)(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;Violence, and the threat of violence, is power.&quot;)[(set: $songthought to &quot;power&quot;)(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;No one is safe.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;No one is safe.&quot;)[(set: $songthought to &quot;safety&quot;)(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;That&#x27;s not a morphine overdose.&quot;)[][Inevitable...]](click: &quot;That&#x27;s not a morphine overdose.&quot;)[(set: $songthought to &quot;observe&quot;)(replace: &quot;It was his own stupidity that got him here.&quot;)[](replace: &quot;Lily&#x27;s cruelty is utterly wrong.&quot;)[](replace: &quot;A man is born free. But trapped, confined, he is a slave.&quot;)[](replace: &quot;What can I gain from this?&quot;)[](replace: &quot;Violence, and the threat of violence, is power.&quot;)[](replace: &quot;No one is safe.&quot;)[][Inevitable...]]
 
 (click: &quot;Inevitable...&quot;)[&quot;//But my knees were far too weak,
 To stand in your arms,
@@ -227,9 +229,9 @@ Feel you heeeere, foreeever,
 You and me together,
 Nothing is beetter.//&quot;]
 
-(click: &quot;Nothing is beetter&quot;)[Over and over I (colour: &quot;#808000&quot;)[vomit], until there is nothing to throw up, and then until my (colour: &quot;#641E16  &quot;)[stomach cramps up].]
+(click: &quot;Nothing is beetter&quot;)[Over and over I (colour: &quot;#808000&quot;)[vomit], until there is nothing to throw up, and then until my (colour: &quot;#641E16  &quot;)[stomach cramps up].] (click: &quot;stomach cramps up&quot;)[(if: $songthought is &quot;stupid&quot;)[That fool is being burned alive and there&#x27;s nothing I can do.](if: $songthought is &quot;cruel&quot;)[Inhumane behaviour. Psychopathic.](if: $songthought is &quot;slave&quot;)[Nobody should be bent to such arbitrary power.](if: $songthought is &quot;gain&quot;)[I will profit from this. I&#x27;ll make sure I do.](if: $songthought is &quot;power&quot;)[This is the way. I must be stronger or she will destroy me too.](if: $songthought is &quot;safety&quot;)[How can I protect myself?](if: $songthought is &quot;observe&quot;)[She lied. Lily lied.] I hold myself still for a moment.]
 
-(click: &quot;stomach cramps up&quot;)[&quot;//...I set (colour: &quot;#FF7400&quot;)[FIIIIIIRE] to the (colour: &quot;#B0E0E6&quot;)[RAAAAAIN],
+(click: &quot;I hold myself still&quot;)[&quot;//...I set (colour: &quot;#FF7400&quot;)[FIIIIIIRE] to the (colour: &quot;#B0E0E6&quot;)[RAAAAAIN],
 And I threw us (colour: &quot;#FFACC0&quot;)[INTO THE FLAAAMES],
 Where we fell something died,
 &#x27;Cause I knew that that was the last time, the last time, oh, oh...//&quot;]
@@ -411,7 +413,7 @@ Chapter 1
 
 (click: &quot;unified and controlled&quot;)[In what sense was the (colour: &quot;#BF8E00&quot;)[Venus] (colour: &quot;#FAEA94&quot;)[Liberal] Party actually committed to freedom?]
 
-(click: &quot;committed to freedom&quot;)[I received a message from (colour: &quot;#FFF3DC&quot;)Professor Lindberg] telling me I didn&#x27;t need to (colour: &quot;#455A50&quot;)[shackled] down by a totalitarian state. She offered me a place on a ship that ran by its own rules. I jumped at the opportunity.]
+(click: &quot;committed to freedom&quot;)[I received a message from (colour: &quot;#FFF3DC&quot;)[Professor Lindberg] telling me I didn&#x27;t need to be (colour: &quot;#455A50&quot;)[shackled] down by a totalitarian state. She offered me a place on a ship that ran by its own rules. I jumped at the opportunity.]
 
 (set: $homeplanet to &quot;Venus&quot;)(set: $homeplanetadjective to &quot;Venutian&quot;)(set: $moralvalue to &quot;freedom&quot;)(set: $moralvalueadjective to &quot;liberal&quot;)(click: &quot;I jumped at the opportunity&quot;)[[[...-&gt;Opportunity]]]</tw-passagedata><tw-passagedata pid="24" name="Profit" tags="" position="1007,299">It was the (colour: &quot;#FFEF64&quot;)[shining light] of (colour: &quot;#37BF3B&quot;)[profit].
 
@@ -569,7 +571,7 @@ Signed,
 
 (click: &quot;close to on-time&quot;)[After 50,000 hours of what felt like wading through treacle we managed - just about - to make the ship truly self-sufficient. By this stage a new system of free, universal medical care - &quot;(colour:&quot;#BD3144&quot;)[Genesis] Care&quot; - had been added to Ayodele&#x27;s brief, making him Chief Health and (colour: &quot;#EE91DB&quot;)[Welfare] Officer. He made me his Delivery Director in the new combined department.]
 
-(click: &quot;He made me his Delivery Director&quot;)[(display: &quot;As the war escalated&quot;)]</tw-passagedata><tw-passagedata pid="36" name="..." tags="" position="303,802">[I... How long have I been staring into space?]
+(click: &quot;He made me his Delivery Director&quot;)[(display: &quot;As the war escalated&quot;)]</tw-passagedata><tw-passagedata pid="36" name="..." tags="" position="296,944">[I... How long have I been staring into space?]
 
 (click: &quot;staring into space&quot;)[What am I looking at?]
 
@@ -597,7 +599,7 @@ xxxxxxxxxxxx]&quot;]
 
 (Click: &quot;The dance of death&quot;)[Let&#x27;s hope I last longer than (colour:&quot;#FFFFE0&quot;)[Malcolm].]
 
-(Click: &quot;longer&quot;)[[[...-&gt;Chapter 1 - Relative Local Time]]]</tw-passagedata><tw-passagedata pid="37" name="As the war escalated" tags="" position="1012,877">But as the (colour: &quot;#FFFD98&quot;)[Solar] System War escalated, our job got harder and harder.
+(Click: &quot;longer&quot;)[[[...-&gt;Chapter 1 - Relative Local Time]]]</tw-passagedata><tw-passagedata pid="37" name="As the war escalated" tags="" position="1012,876">But as the (colour: &quot;#FFFD98&quot;)[Solar] System War escalated, our job got harder and harder.
 
 (click: &quot;harder and harder&quot;)[4,000 hours ago, (colour: &quot;#BD6431&quot;)[Devarim] was shot down by a (colour: &quot;#CB588B&quot;)[Plutonian] fighter convoy, and I got a call from Malcolm.]
 
@@ -611,7 +613,17 @@ xxxxxxxxxxxx]&quot;]
 
 (click: &quot;getting caught in its blast&quot;)[We had a choice. We could flee the (colour: &quot;#FFFD98&quot;)[Solar] System into the unknown, and possibly starve to (colour: &quot;#55565F&quot;)[death], or we could stay and await possible annihilation.]
 
-(click: &quot;annihilation&quot;)[After a few intense hours of altercations, Alex demanded that (colour:&quot;#BD3144&quot;)[Genesis] and (colour: &quot;#854378&quot;)[Exodus] leave with her and Malcolm assented. We left those who stayed behind on (colour: &quot;#3BC49F&quot;)[Leviticus].]
+(click: &quot;annihilation&quot;)[I said we should stay.
+I said we should leave.
+I said nothing.](click: &#x27;I said we should stay.&#x27;)[(set: $solarwarchoice to &quot;stay&quot;)
+
+Alex noted my words before overriding me.(replace: &quot;I said we should leave.&quot;)[](replace: &#x27;I said nothing.&#x27;)[]](click: &#x27;I said we should leave.&#x27;)[(set: $solarwarchoice to &quot;leave&quot;)
+
+Alex noted my words before agreeing with me.(replace: &quot;I said we should stay.&quot;)[](replace: &#x27;I said nothing&#x27;)[]](click: &#x27;I said nothing.&#x27;)[(set: $solarwarchoice to &quot;nothing&quot;)
+
+Alex noted my abstention before saying we should leave.(replace: &quot;I said we should leave.&quot;)[](replace: &#x27;I said we should stay.&#x27;)[]]
+
+(click: &quot;Alex noted&quot;)[After a few intense hours of altercations, Alex demanded that (colour:&quot;#BD3144&quot;)[Genesis] and (colour: &quot;#854378&quot;)[Exodus] leave with her and Malcolm assented. We left those who stayed behind on (colour: &quot;#3BC49F&quot;)[Leviticus].]
 
 (click: &quot;Leviticus&quot;)[For 172 hours we accelerated into the great (colour: &quot;#505050&quot;)[dark] beyond our system.]
 
@@ -737,7 +749,15 @@ Malcolm&#x27;s face is (colour: red)[red] and blotchy.
 
 (click: &quot;yellow teeth&quot;)[[[&quot;Something must be done.&quot;-&gt;&quot;Something must be done.&quot;]]
 [[&quot;What are you implying?&quot;-&gt;&quot;What are you implying?&quot;]]
-[[&quot;We&#x27;re doing what we can.&quot;-&gt;&quot;We&#x27;re doing what we can.&quot;]]]</tw-passagedata></tw-storydata>
+[[&quot;We&#x27;re doing what we can.&quot;-&gt;&quot;We&#x27;re doing what we can.&quot;]]]</tw-passagedata><tw-passagedata pid="43" name="Key choices the player has made" tags="" position="43,776">How did they engage with Lily in Prologue?
+
+What did they think of Malcolm&#x27;s murder?
+
+Why did they join Genesis?
+
+Who did they serve under in the solar system war?
+
+Did they support leaving the solar system, staying, or did they hold their tongue?</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
